duniverse/menhirLib.20200211/test/static/bad/on-error-reduce-ill-kinded.mly
%token A B
%start<unit> main
%on_error_reduce phrase

%%

main:
  A phrase(B) {}

phrase(X):
  X* {}
