duniverse/menhirLib.20200211/test/static/bad/on-error-reduce-ill-kinded.exp
File "on-error-reduce-ill-kinded.mly", line 3, characters 17-23:
Error: how is the symbol "phrase" parameterized?
It is used at sorts * and (*) -> *.
The sort * is not compatible with the sort (*) -> *.
